feature(guild): added guild id mapping and new routes for guild id retrieval
