# internal/router/router.go
@@ -126,6 +126,7 @@ func New(h *handler.Handler, queries database.Querier, jwtSecret string, allowed
 					// Organizations (full access)
 					r.Get("/organizations", h.ListOrganizations)
 					r.Post("/organizations", h.CreateBotOrganization)
+					r.Get("/organizations/guilds/{guild_id}", h.GetOrganizationByGuildID)
 					r.Get("/organizations/{oid}", h.GetOrganization)
 					r.Put("/organizations/{oid}", h.UpdateOrganization)
 					r.Delete("/organizations/{oid}", h.DeleteOrganization)
